--- a/hello-penguins.qmd
+++ b/hello-penguins.qmd
@@ -2,6 +2,7 @@
 title: "Hello, Penguins!"
 format: html
 editor: visual
+author: Markus
 ---
 
 ## Data
@@ -11,6 +12,7 @@ For this analysis we'll use the penguins dataset from the palmerpenguins R packa
 ```{r}
 #| label: load-packages
 #| message: false
+#| echo: false
 
 library(tidyverse)
 library(ggthemes)
