--- a/callout-boxes.qmd
+++ b/callout-boxes.qmd
@@ -1,19 +1,28 @@
 ---
 title: "Callout boxes"
-format: html
+format: pdf
 editor: visual
 ---
 
-::: callout-note
+::: {.callout-important appearance="simple"}
 Note that there are five types of callouts, including: `note`, `warning`, `important`, `tip`, and `caution`.
 :::
 
 ::: callout-tip
+## Hello, is it me you're looking for?
+
 This should be an example of a callout with a caption. So add a caption!
 :::
 
-::: callout-caution
+::: {.callout-caution collapse="true"}
 ## Expand To Learn About Collapse
 
 This should be an example of a "folded" caution callout that can be expanded by the user. You can use `collapse="true"` to collapse it by default or `collapse="false"` to make a collapsible callout that is expanded by default. Try adding these to attributes.
 :::
+
+::: callout-warning
+## Important warning
+
+This is a warning.
+:::
+
