--- a/markdown-syntax.qmd
+++ b/markdown-syntax.qmd
@@ -1,12 +1,28 @@
 ---
+title: markdown-syntax
 format: html
 editor: source
+author: Markus
+table-of-contents: true
 ---
 
-1.  Add a title and author to the YAML header. Add a table of contents as well.
+## Tasks
+
+1.  Add a *title* and **author** to the YAML header. Add a table of contents as well.
 
 2.  Add two major sections with level two headers. Add a subsection to one of your major sections.
 
 3.  Add an image link to a web image you have chosen.
 
-4.  Use any markdown syntax that you can recall from the slides or refresh your memory from <https://quarto.org/docs/authoring/markdown-basics.html>.
+4.  ~~Use any markdown syntax that you can recall from the slides or refresh your memory from <https://quarto.org/docs/authoring/markdown-basics.html>.~~
+
+## All the rest
+
+![Beautiful image^2^](https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fblog.stihl.co.uk%2Fwp-content%2Fuploads%2F2017%2F10%2FGrowing-pumpkins.jpg&f=1&nofb=1&ipt=1fdd737e96042087c81c543ef089054ba59b48243fb8843141cdf5820d4917ae&ipo=images)
+
+> I like pumpkin.
+>  - Markus
+
+### The end of it
+
+Nothing else to show here.
